<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#ecf0f1"
android:orientation="vertical"
tools:context="com.javapapers.calculator.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.3"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/editText"
        style="@style/styleTextedit"/>
</LinearLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_1"
        android:text="@string/_1"
        style="@style/styleBottom" />

    <Button
        android:id="@+id/button_2"
        style="@style/styleBottom"
        android:text="@string/_2" />

    <Button
        android:id="@+id/button_3"
        style="@style/styleBottom"
        android:text="@string/_3" />

    <Button
        android:id="@+id/button_division"
        android:text="@string/_11"
        style="@style/styleBottFunc"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_6"
        style="@style/styleBottom"
        android:text="@string/_4" />

    <Button
        android:id="@+id/button_7"
        style="@style/styleBottom"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button_8"
        android:text="@string/_6"
        style="@style/styleBottom" />

    <Button
        android:id="@+id/button_subtraction"
        android:text="@string/_13"
        style="@style/styleBottFunc" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_11"
        android:text="@string/_7"
        style="@style/styleBottom" />

    <Button
        android:id="@+id/button_12"
        android:text="@string/_8"
        style="@style/styleBottom" />

    <Button
        android:id="@+id/button_13"
        android:text="@string/_9"
        style="@style/styleBottom"/>

    <Button
        android:id="@+id/button_multiplication"
        android:text="@string/_10"
        style="@style/styleBottFunc" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_point"
        android:text="@string/_point"
        style="@style/styleBottFunc" />

    <Button
        android:id="@+id/button_0"
        android:text="@string/_0"
        style="@style/styleBottom"/>


    <Button
        android:id="@+id/button_summ"
        android:text="@string/_12"
        style="@style/styleBottFunc" />
    <Button
        android:id="@+id/button_clear"
        android:text="@string/clear"
        style="@style/styleBottFinal" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_total"
            android:text="@string/_14"
            style="@style/styleBottFinal" />

    </LinearLayout>


</LinearLayout>

